--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 .calculator-grid {
     display: grid;
     justify-content: center;
-    align-items: center;
+    align-content: center;
     min-height: 100vh;
     grid-template-columns: repeat(4, 100px);
     grid-template-rows: minmax(120px, auto) repeat(5, 100px);
@@ -48,8 +48,11 @@ body {
 }
 
 .output .previous-operand {
+    color: rgba(255, 255, 255, .75);
+    font-size: 1.5rem;
+}
+
+.output .curent-operand {
     color: white;
     font-size: 2.5rem;
 }
-
-biggers
